<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginVertical="8dp"
    android:backgroundTint="@color/sage"
    android:background="@drawable/rounded_corner">

    <!-- TextView for displaying the journey title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/journey_title_text_view"
        android:text="@string/journey_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginVertical="4dp"/>

    <!-- TextView for displaying the journey details -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/journey_details_text_view"
        android:text="@string/journey_details"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="17sp"
        android:layout_marginVertical="4dp"/>

    <!-- TextView for displaying the journey timestamp -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/journey_timestamp_text_view"
        android:text="@string/journey_date"
        android:textSize="12sp"
        android:gravity="right"
        android:layout_marginVertical="4dp"/>

    <!-- ImageView for displaying the journey image -->
    <ImageView
        android:id="@+id/journey_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/journey" />

</LinearLayout>