<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".LoginActivity">

    <!-- Logo at the top of the screen -->
    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="22dp"
        android:src="@drawable/logo" />

    <!-- Container for the intro text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_icon"
        android:id="@+id/intro_text"
        android:orientation="vertical">

        <!-- App name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/journeyjournal"
            android:textAlignment="center"
            android:textColor="@color/navy"
            android:textSize="48sp"
            android:textStyle="bold" />

        <!-- Welcome message -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/navy"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Container for the login form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_layout"
        android:layout_below="@id/intro_text"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <!-- Email input field -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />

        <!-- Password input field -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/login_btn"
            android:layout_height="64dp"
            android:text="@string/login"
            android:layout_marginTop="36dp"
            android:textSize="22sp"
            android:textColor="@color/sage"
            />

        <!-- Progress bar, initially hidden -->
        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="12dp"/>

    </LinearLayout>

    <!-- Container for the registration prompt -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Registration prompt text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"/>

        <!-- Registration button -->
        <TextView
            android:id="@+id/register_text_view_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/register"
            android:textColor="@color/navy"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>