<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:padding="20dp"
    tools:context=".JourneyDetailsActivity">

    <!-- Title bar layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_bar_layout">

        <!-- Page title -->
        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_journey"
            android:textColor="@color/navy"
            android:fontFamily="@font/outfit_regular"
            android:textSize="32sp"
            android:textStyle="bold" />

        <!-- Delete journey button -->
        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/delete_journey_btn"
            android:src="@drawable/baseline_delete_24"
            android:layout_toStartOf="@+id/save_journey_btn"
            android:layout_centerVertical="true"
            android:visibility="gone"
            app:tint="@color/navy"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <!-- Save journey button -->
        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/save_journey_btn"
            android:src="@drawable/baseline_add_task_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:tint="@color/navy"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

    </RelativeLayout>

    <!-- Layout for journey details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:layout_above="@id/insert_photo_text_view_btn"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/sage"
        android:background="@drawable/rounded_corner"
        >

        <!-- Journey title input field -->
        <EditText
            android:id="@+id/journey_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/title"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Journey details input field -->
        <com.example.journeyjournal.NotebookEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/journey_details_text"
            android:hint="@string/details"
            android:minLines="8"
            android:gravity="top"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"/>

        <!-- Journey image view -->
        <ImageView
            android:id="@+id/journey_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

    </LinearLayout>

    <!-- Insert photo button -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert_photo_text_view_btn"
        android:text="@string/insert_photo"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:background="@color/navy"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <!-- Geolocation button -->
    <ImageButton
        android:id="@+id/geolocation_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="13dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_map_24"
        app:tint="@color/navy" />

</RelativeLayout>